--- a/Pipfile
+++ b/Pipfile
@@ -25,10 +25,11 @@ python-dateutil = "==2.8.2"
 python-editor = "==1.0.4"
 greenlet = "==2.0.1"
 Mako = "==1.2.4"
-eventlet = "==0.30.2"
+eventlet = "==0.33.3"
 flask-socketio = "==5.3.2"
 boto3 = "==1.26.69"
 faker = "==17.0.0"
+psycopg = {extras = ["binary"], version = "*"}
 
 [dev-packages]
 
