--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,8 @@ six==1.16.0
 sqlalchemy==1.4.46
 werkzeug==2.2.2
 wtforms==3.0.1
-eventlet==0.30.2
+# eventlet==0.30.2
 flask-socketio==5.3.2
 boto3==1.26.69
 faker==17.0.0
+gevent==22.10.2
